//
//  MedicAccessibilityIdentifiers.swift
//  MediStock
//
//  Created by Yannick LEPLARD on 27/01/2025.
//

import Foundation



enum AccessID {
    static let appTitle = "app-title"
    static let authEmail = "auth-email-textfield"
    static let authPassword = "auth-password-textfield"
    static let authSignIn = "auth-sign-in-button"
    static let authSignUp = "auth-sign-up-button"
    static let tabAisles = "tab-aisles"
    static let tabAllMedicines = "tab-all-medicines"
    static let searchMedicine = "search-medicine"
    static let sortMedicines = "sort-medicines"
    static let noneSort = "sort-none"
    static let nameSort = "sort-by-name"
    static let stockSort = "sort-by-stock"
    static let addMedicine = "add-medicine-button"
    static let signOut = "sign-out-button"
    static let medicineName = "medicine-name-textfield"
    static let initialStock = "initial-stock-textfield"
    static let decreaseStock = "decrease-stock-button"
    static let increaseStock = "increase-stock-button"
    static let currentStock = "current-stock-text"
    static let existingAisleButton = "existing-aisle-button"
    static let newAisleButton = "new-aisle-button"
    static let newAisle = "new-aisle-textfield"
    static let existingAislePicker = "existing-aisle-picker"
    static let addMedicineConfirm = "add-medicine-confirm-button"
    static let aisleRow = "aisle-row" // suivi du nom de l'aisle dans le code
}
    
